--- a/files/index.css
+++ b/files/index.css
@@ -31,7 +31,7 @@ body {
     max-width: 200px; 
     height: 200px; 
     border-radius: 30px;
-    border-color: #A3D1C6;
+    
     border-width: 10px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     transition: transform 0.3s ease-in-out;
@@ -211,4 +211,14 @@ a {
 #Editing:hover , #FrontEnd:hover ,#Kharajni:hover, #Portfolio:hover {
     transform: scale(1.1);
 
+}
+#mode {
+    width: 7%;
+    height: 5%;
+    border-radius: 25px; 
+    cursor: pointer;
+    border: none;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, 
+                rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, 
+                rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
