--- a/files/index.css
+++ b/files/index.css
@@ -221,4 +221,9 @@ a {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, 
                 rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, 
                 rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    transition: transform 0.3s ease-in-out;
+}
+#mode:hover {
+    transform: scale(1.03);
+
 }
